Migrate sw-precache to workbox-cli

--- a/_config.yml
+++ b/_config.yml
@@ -44,7 +44,7 @@ exclude:
     "node_modules",
     "vendor",
     "_bin",
-    "sw-precache-config.js",
+    "workbox-config.js",
   ]
 
 markdown: kramdown
